# TXLiteAVMacDemo

./: README.md
OCDemo/TRTCDemo/: SDKHeader.h
OCDemo/TRTCDemo.xcodeproj/: project.pbxproj
OCDemo/TRTCDemo.xcodeproj/project.xcworkspace/xcuserdata/einhorn.xcuserdatad/: UserInterfaceState.xcuserstate
OCDemo/TRTCDemo.xcodeproj/xcuserdata/einhorn.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
OCDemo/TRTCDemo/TRTC/: TRTCMainWindowAccessory.xib  TRTCMainWindowController.m  TRTCMainWindowController.xib  TRTCNewWindowController.m  TRTCNewWindowController.xib
OCDemo/TRTCDemo/TRTC/CPP/: TRTCCppWindow.h  TRTCCppWindow.mm  TRTCCppWindow.xib  TRTCUserManagerCpp.h  TRTCUserManagerCpp.m  TXCppRenderView.h  TXCppRenderView.m
OCDemo/TRTCDemo/TRTC/CaptureSource/: TXCaptureSourceCollectionHeaderView.xib  TXCaptureSourceViewController.xib  TXCaptureSourceWindowController.h  TXCaptureSourceWindowController.m  TXCaptureSourceWindowController.xib
OCDemo/TRTCDemo/TRTC/RenderView/: TXRenderView.xib
OCDemo/TRTCDemo/TRTC/Usersig/: GenerateTestUserSig.h
QTDemo/LiteAVQTDemo/: CMakeLists.txt  main.cpp
QTDemo/build-LiteAVQTDemo-Desktop_Qt_5_15_2_clang_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
QTDemo/build-LiteAVQTDemo-Desktop_Qt_5_15_2_clang_64bit-Debug/.qtc_clangd/: compile_commands.json
QTDemo/build-LiteAVQTDemo-Desktop_Qt_5_15_2_clang_64bit-Debug/LiteAVQTDemo.app/Contents/: Info.plist
QTDemo/build-LiteAVQTDemo-Desktop_Qt_5_15_2_clang_64bit-Debug/LiteAVQTDemo_autogen/: deps
QTDemo/build-LiteAVQTDemo-Desktop_Qt_5_15_2_clang_64bit-Debug/LiteAVQTDemo_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
QTDemo/build-LiteAVQTDemo-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QTDemo/build-LiteAVQTDemo-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qt/: QtDeploySupport.cmake
QTDemo/build-LiteAVQTDemo-Desktop_arm_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
QTDemo/build-LiteAVQTDemo-Desktop_arm_darwin_generic_mach_o_64bit-Debug/LiteAVQTDemo.app/Contents/: Info.plist
QTDemo/build-LiteAVQTDemo-Desktop_arm_darwin_generic_mach_o_64bit-Debug/LiteAVQTDemo_autogen/: deps
QTDemo/build-LiteAVQTDemo-Desktop_arm_darwin_generic_mach_o_64bit-Debug/LiteAVQTDemo_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
QTDemo/build-LiteAVQTDemo-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QTDemo/build-LiteAVQTDemo-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qt/: QtDeploySupport.cmake
QTDemo/build-LiteAVQTDemo-Desktop_x86_windows_msvc2022_pe_64bit-Debug/.qtc_clangd/: compile_commands.json
QTDemo/build-LiteAVQTDemo-Desktop_x86_windows_msvc2022_pe_64bit-Debug/LiteAVQTDemo_autogen/: deps
QTDemo/build-LiteAVQTDemo-Desktop_x86_windows_msvc2022_pe_64bit-Debug/LiteAVQTDemo_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
QTDemo/build-LiteAVQTDemo-Qt_6_4_3_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
QTDemo/build-LiteAVQTDemo-Qt_6_4_3_for_macOS-Debug/.qt/: QtDeploySupport.cmake
QTDemo/build-LiteAVQTDemo-Qt_6_4_3_for_macOS-Debug/.qtc_clangd/: compile_commands.json
QTDemo/build-LiteAVQTDemo-Qt_6_4_3_for_macOS-Debug/LiteAVQTDemo.app/Contents/MacOS/: LiteAVQTDemo
QTDemo/build-LiteAVQTDemo-Qt_6_4_3_for_macOS-Debug/LiteAVQTDemo_autogen/: deps
QTDemo/build-LiteAVQTDemo-Qt_6_4_3_for_macOS-Debug/LiteAVQTDemo_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
(+581 files in other folders)
